# Control-System

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  ctrl_error.h  ssa_config.h.in  test  test.c  test_gmp  test_gmp.c  test_r2r  test_r2r.c
cmake/: BuildOutOfSource.cmake  ProjectWarnings.cmake  SpecialFlags.cmake
control-LTI/: openblas_interface.c  openblas_interface.h  ss_model.c  ss_model.h
control-LTV/: mtrx_pol_ops.c  mtrx_pol_ops.h  pmul.c  pmul.h  poly_ops.c  poly_ops.h  ss_model_LTV.c  ss_model_LTV.h
datatypes/: CMakeLists.txt  polynom.c  ssa_types.h
docs/: conf.py  error.rst  fdl.rst  gpl.rst  index.rst
error/: CMakeLists.txt  ssa_error.c  ssa_error.h  ssa_log.c  ssa_stream.c  ssa_strerror.c
solver/: solver_LTI.c  solver_LTI.h
tests/: CMakeLists.txt
